sorted blurry canvas issue

--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -6,12 +6,12 @@
 
 
 /* messages unordered list element */
-  
+
 
  div.relative {
               position: relative;
-              } 
-            
+              }
+
  div.absolute {
               background-color:white;
               position: absolute;
@@ -24,7 +24,7 @@
               }
 #m{
         color: black;
-  }          
+  }
 
 /* Chat styles */
 /* body color */
@@ -37,7 +37,7 @@ body {
 
 form {
       background:yellow;
-      padding: 10px;  
+      padding: 10px;
       position: fixed;
       bottom: 0;
       width: 98%;
@@ -56,11 +56,11 @@ form input {
 
 /* button for form */
 form button {
-          
+
             width: 10.5%;
             background: rgb(130, 224, 255);
             border: none; padding: 10px;
-          
+
             }
 
 button:hover {
@@ -79,3 +79,15 @@ button:hover {
 #messages li:nth-child(odd) {
                             background: #eee;
                             }
+
+#canvascontainer {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#canvas {
+  padding: 0;
+  margin: 0;
+}
